# SpendWise-Local

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test_regex.py
SpendWise-Local/: .env.example  .gitignore  main.py  pyproject.toml
SpendWise-Local/src/: parser.py  processor.py
src/: ingestion.py  parser.py  processor.py
