[project]
name = "spendwise-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
